# ChangeLog for app-misc/cl-gnome-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-gnome-meta-2.28-r2 (14 Jan 2011)

  14 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cl-gnome-meta-2.28-r2.ebuild:
  Add gnome-extra/sensors-applet IssueID #200.

*cl-gnome-meta-2.28-r1 (08 Nov 2010)

  08 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-gnome-meta-2.28-r1.ebuild:
  Removed gnome-base/gnome-volume-manager

*cl-gnome-meta-2.28 (08 Jun 2010)

  08 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-gnome-meta-2.28.ebuild, -cl-gnome-meta-10.5.83.ebuild:
  Change version.

*cl-gnome-meta-10.5.83 (08 Jun 2010)

  08 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cl-gnome-meta-10.5.83.ebuild:
  Init gnome-meta.
