@@ -1,4 +1,5 @@
 EBUILD cl-gnome-meta-2.28-r1.ebuild 3391 RMD160 074c9b12eafb52848d441213061bf107f5a015c6 SHA1 cf87ff0157a92e2ca3f99ba221c072609b920bb7 SHA256 a77c30521ddb575f00dc202e5388c6ed9bb66147ea9b4252b90fb285defc0c43
 EBUILD cl-gnome-meta-2.28-r2.ebuild 3440 RMD160 c99fab0e592e3911b5d2e83a1039a6265e3c3b3a SHA1 6140d5b5b4215e6fbe2368620d80daa209f447f5 SHA256 080d8bfa2405c71ae41c3fc0ecb7deca2493b652d0e41e3b6cc0045411741cc4
+EBUILD cl-gnome-meta-2.28-r3.ebuild 3511 RMD160 e086ed94edc021aac2dd7a547cf068c343222f24 SHA1 ae3f7cc8ab2ca641a0bf1433503b7b07b033630f SHA256 5b8705ba1e1bce87e3c1c481c27bc019f42b24410deb08c29a795b789de4537f
 EBUILD cl-gnome-meta-2.28.ebuild 3390 RMD160 3c26a90f599da7cd322010d1fa18f87973b3aefe SHA1 9a85d3ad81eae702aa202ed2eb63b3d0a0745365 SHA256 071af27e87eeba1496171d3c17bef2974f2b6af216b4bb5c17cabd355bd91fc4
-MISC ChangeLog 812 RMD160 eb76e08b1c2ac9e9ac665adbd463bc295d0fafd1 SHA1 06f14c5b3a4d2f781b2833e525533199c6d5a79a SHA256 20923d7cdf2fa86f7d588ed95452d47236295c3664dbd88bcf56a7d03c1c5bdc
+MISC ChangeLog 986 RMD160 6e9df37bdc9456c529e4a1bedf056b56f24e915a SHA1 1b9fba4ff66ea597294361f61337236d7be02d1f SHA256 78bea2f1d1b5437b35654792a844b6c75ef81f82568b558a313f0297a6fe825b
