@@ -1,2 +1,2 @@
-EBUILD cl-office-meta-11.0-r3.ebuild 1332 RMD160 36f8e60b9ba15fa9c9f9a7fce287aa96aba3ecbc SHA1 7feceabce828bdb728934fb69828a21b2be9162e SHA256 f71f92b0c4187f43600736566203fc9303bae6ff08f206243a9298dce85b91a5
+EBUILD cl-office-meta-11.0-r4.ebuild 1313 RMD160 9ddd52285ea4baa84434569f37b057c7b40cc06d SHA1 ff97be4cc2b7ce3e82da8c973d0e4a348c9c997e SHA256 a846da2566d46c1e70d756ea2012f2fc1544c7b2881aea493ed5f520b8a42560
 MISC ChangeLog 729 RMD160 24230a2ec2f2586315dafdf993ed122f168074b9 SHA1 16a13ab90ac8e9db9d1f955a4d616e8d82217cc3 SHA256 09660548274f17c33b9832839a4c3127ae25e8b023eace8095c488f93272b7ca
