@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-gnome-meta-2.28-r3 (31 Jan 2011)
+
+  31 Jan 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cl-gnome-meta-2.28-r3.ebuild:
+  Added calculate_nonetwork USE flag
+
 *cl-gnome-meta-2.28-r2 (14 Jan 2011)
 
   14 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
